[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/Syringe.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/background.png" type="Texture" id=4]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/font/PressStart2P.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 120
extra_spacing_char = 5
font_data = ExtResource( 6 )

[node name="Game" type="Node"]
script = ExtResource( 2 )
Syringe = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="SyringeSpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="MobSpawnPath" type="Path2D" parent="."]

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawnPath"]
rotation = 0.0379143

[node name="HUD" type="CanvasLayer" parent="."]
layer = -1

[node name="GameOverTxt" type="Label" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0627451, 0.858824, 0.101961, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 1
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AfterGameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 4000 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 4000.0
margin_bottom = 4000.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="hit_by_enemy" from="Player" to="." method="_on_Player_hit_by_enemy"]
[connection signal="victim_infected" from="Player" to="." method="_on_Player_victim_infected"]
[connection signal="timeout" from="SyringeSpawnTimer" to="." method="_on_SyringeSpawnTimer_timeout"]
[connection signal="timeout" from="AfterGameOverTimer" to="." method="_on_AfterGameOverTimer_timeout"]
